name:               th-unify
version:            1.9
cabal-version:      >= 1.10
build-type:         Simple
license:            BSD3
category:           Template Haskell
author:             David Fox
copyright:          (c) David Fox
maintainer:         David Fox <dsf@seereason.com>
homepage:           https://github.com/seereason/th-unify
bug-reports:        https://github.com/seereason/th=unify/issues
stability:          experimental
synopsis:           Unification for template haskell Types, with some applications
description:
  Unification of the type "Type" has various applications, in
  particular doing a better job of building instances such as SafeCopy
  and Serialize.  Unification is an operation which zips two types and
  determines where type variables are matched to some corresponding
  type, resulting in type variable bindings.  For example, a type is an
  instance of a class if it unifies with any of the class instances.
  See the package th-unify-clients for some examples of use.

library
  default-language: Haskell2010
  ghc-options: -Wall -O
  hs-source-dirs: src
  build-depends:
    base >= 4.8 && < 5,
    containers,
    cereal,
    data-default,
    extra,
    lens,
    ListLike,
    mtl,
    pretty,
    safecopy,
    show-please,
    syb,
    template-haskell,
    th-desugar,
    th-lift,
    th-lift-instances,
    th-orphans
  exposed-modules:
    Data.THUnify.Prelude
    Data.THUnify.Prelude.Containers
    Data.THUnify.Prelude.Debug
    Data.THUnify.Prelude.Desugar
    Data.THUnify.Prelude.Monad
    Data.THUnify.Prelude.Orphans
    Data.THUnify.Prelude.Ppr
    Data.THUnify.Prelude.TH
    Data.THUnify.Phantom
    Data.THUnify.Reify
    Data.THUnify.Traverse
    Data.THUnify.TypeRep
    Data.THUnify.Unify

test-suite th-unify-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  ghc-options: -Wall -O
  main-is: Tests.hs
  other-modules: TestTypes
  build-depends:
    base >= 4.8 && < 5,
    bytestring,
    cereal,
    containers,
    HUnit,
    lens,
    mtl,
    sr-extra >= 1.52,
    syb,
    template-haskell,
    th-lift,
    th-unify,
    time,
    userid,
    vector
